Raziel Valle Miranda; Actualizando Trabajo

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,8 @@
+fractalia_sms:
+    resource: "@FractaliaSMSBundle/Controller/"
+    type:     annotation
+    prefix:   /
+
 raziel:
     resource: "@RazielBundle/Controller/"
     type:     annotation
